# sentry-kafka-management

./: .craft.yml  .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: build.yml  build_image.yml  build_python.yml  ci.yaml  pre-commit.yaml  release.yaml  type-checking.yaml
devenv/: config.ini  sync.py
devservices/: local-clusters.yml
devservices/kafka-conf/: local-clusters.yml  local-topics.yml  local.yml
scripts/: bump-version.sh
sentry_kafka_management/: brokers.py  cli.py  common.py  main.py
sentry_kafka_management/actions/: README.md  brokers.py  clusters.py  conf.py  emergency_config.py  kafkactl.py  topics.py
sentry_kafka_management/actions/brokers/: configs.py  healthcheck.py  parser.py
sentry_kafka_management/actions/brokers_local/: README.md
sentry_kafka_management/actions/latency/: consumer_latency.py  metrics.py
sentry_kafka_management/actions/local/: README.md  brokers.py  kafka_cli.py  manage_configs.py  server_properties.py
sentry_kafka_management/actions/topics/: describe.py  healthcheck.py  partitions.py  placement.py
sentry_kafka_management/connectors/: admin.py  kafka_config.py  kafkactl.py
sentry_kafka_management/scripts/: README.md  brokers  brokers.py  clusters.py  emergency_config.py  topics  topics.py
sentry_kafka_management/scripts/brokers/: configs.py  healthcheck.py
sentry_kafka_management/scripts/brokers_local/: filesystem.py
sentry_kafka_management/scripts/latency/: consumer_latency.py
sentry_kafka_management/scripts/local/: brokers.py  filesystem.py  manage_configs.py
sentry_kafka_management/scripts/topics/: describe.py  healthcheck.py  partitions.py  placement.py
tests/: conftest.py  test_brokers.py  test_cli.py
tests/actions/: test_brokers.py  test_clusters.py  test_emergency_config.py  test_kafkactl.py  test_topics.py
tests/actions/brokers/: test_configs.py  test_healthcheck.py  test_parser.py
tests/actions/brokers_local/: test_filesystem.py
tests/actions/latency/: test_metrics.py  (+1 more)
tests/connectors/: test_admin.py  test_kafkactl.py
tests/scripts/: test_brokers.py  test_clusters.py  test_emergency_config.py  test_latency.py  test_topics.py
(+17 files in other folders)
