[project]
name = "sentry_kafka_management"
version = "0.0.1"
description = "Libraries used by Sentry for kafka management"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
  "confluent-kafka>=2.8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.1.2",
  "sentry_devenv>=1.22.2",
  "mypy>=1.17.1",
]

[tool.uv]
environments = ["sys_platform == 'darwin' or sys_platform == 'linux'"]

[[tool.uv.index]]
url = "https://pypi.devinfra.sentry.io/simple"
default = true

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "confluent_kafka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "devenv.*"
ignore_missing_imports = true

[tool.black]
# File filtering is taken care of in pre-commit.
line-length = 100
