[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentry_kafka_management"
version = "0.0.2"
description = "Libraries used by Sentry for kafka management"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
  "confluent-kafka>=2.8.0",
  "PyYAML",
]

[dependency-groups]
dev = [
  "pytest>=8.1.2",
  "sentry_devenv>=1.22.2",
  "mypy>=1.17.1",
  "devservices>=1.2.1",
  "pre-commit>=4.1.0",
  "types-PyYAML",
  "black>=24.10.0",
  "isort>=5.13.0",
  "flake8>=7.1.1"
]

[tool.uv]
environments = ["sys_platform == 'darwin' or sys_platform == 'linux'"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sentry_kafka_management*"]

[tool.setuptools.package-data]
sentry_kafka_management = ["py.typed"]

[[tool.uv.index]]
url = "https://pypi.devinfra.sentry.io/simple"
default = true

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "confluent_kafka"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "confluent_kafka.admin"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "devenv.*"
ignore_missing_imports = true

[tool.black]
# File filtering is taken care of in pre-commit.
line-length = 100
